parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    BITAND
    BITNOT
    BITOR
    CALLABLE
    CATCH
    CLASS
    CLONE
    CONCAT
    CONCATASSIGN
    CONST
    DECLARE
    DECREMENT
    DIE
    DIVIDEASSIGN
    DO
    DOC_COMMENT
    DOUBLEQUOTE
    ELSEIF
    EMPTY
    ENDWHILE
    ERRORCONTROL
    EVAL
    EXECUTION
    EXIT
    EXPASSIGN
    EXTENDS
    FINAL
    FINALLY
    FOREACH
    GLOBAL
    GOTO
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INCREMENT
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    LOGICALNOT
    MATCH
    MINUSASSIGN
    MODASSIGN
    NAMESPACE
    PLUSASSIGN
    PRIVATE
    PROTECTED
    PUBLIC
    QUOTE
    REQUIRE
    REQUIRE_ONCE
    RETURN
    STATIC
    THROW
    TIMESASSIGN
    TRAIT
    TRY
    UNSET
    USE
    VAR
    WHILE
    YIELD
    YIELD_FROM
    __HALT_COMPILER

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cuerpo
Rule 2     programa -> programa cuerpo
Rule 3     cuerpo -> arithmeticExpression
Rule 4     cuerpo -> if_elseStatement
Rule 5     cuerpo -> forStatement
Rule 6     cuerpo -> switchStatement
Rule 7     cuerpo -> arrayAsignation
Rule 8     cuerpo -> queueDeclaration
Rule 9     cuerpo -> queueEnqueue
Rule 10    cuerpo -> queueDequeue
Rule 11    cuerpo -> defineFunction
Rule 12    cuerpo -> anonymousFunction
Rule 13    cuerpo -> arrowFunction
Rule 14    cuerpo -> echo
Rule 15    cuerpo -> fgets
Rule 16    cuerpo -> stackDeclaration
Rule 17    cuerpo -> stackPush
Rule 18    cuerpo -> stackPop
Rule 19    cuerpo -> line
Rule 20    cuerpo -> print
Rule 21    cuerpo -> logicalCondition
Rule 22    cuerpo -> OPEN_TAG
Rule 23    cuerpo -> CLOSE_TAG
Rule 24    switchStatement -> SWITCH LPAREN value RPAREN LCURLY switchCases switchDefault RCURLY
Rule 25    switchDefault -> DEFAULT COLON programa
Rule 26    switchCase -> CASE value COLON programa BREAK SEMICOLON
Rule 27    switchCases -> switchCase
Rule 28    switchCases -> switchCases switchCase
Rule 29    if_elseStatement -> IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody RCURLY ELSE ifStatementBody
Rule 30    if_elseStatement -> IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody
Rule 31    ifStatementBody -> cuerpo
Rule 32    ifStatementBody -> cuerpo CONTINUE SEMICOLON
Rule 33    ifStatementBody -> ifStatementBody cuerpo
Rule 34    forStatement -> FOR LPAREN forStatementCondition RPAREN LCURLY forStatementBody RCURLY
Rule 35    forStatementCondition -> SEMICOLON SEMICOLON
Rule 36    forStatementCondition -> variableAsignation SEMICOLON SEMICOLON variableAsignation
Rule 37    forStatementCondition -> variableAsignation SEMICOLON comparingValue SEMICOLON variableAsignation
Rule 38    forStatementBody -> cuerpo
Rule 39    forStatementBody -> forStatementBody cuerpo
Rule 40    arrayAsignation -> ID EQUAL arrayDeclaration SEMICOLON
Rule 41    arrayDeclaration -> ARRAY arraysValues RPAREN
Rule 42    arrayDeclaration -> LSQUARE arraysValues RSQUARE
Rule 43    arrayDeclaration -> arrayValue
Rule 44    arraysValues -> arrayValue
Rule 45    arraysValues -> arraysValues COMMA arrayValue
Rule 46    arrayValue -> ARRAY values RPAREN
Rule 47    arrayValue -> LSQUARE values RSQUARE
Rule 48    stackDeclaration -> ID EQUAL NEW STACK SEMICOLON
Rule 49    stackPush -> ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
Rule 50    stackPop -> ID OBJOP POP SEMICOLON
Rule 51    queueDeclaration -> ID EQUAL NEW QUEUE SEMICOLON
Rule 52    queueEnqueue -> ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
Rule 53    queueDequeue -> ID OBJOP POP SEMICOLON
Rule 54    defineFunction -> FUNCTION ID LPAREN arguments RPAREN LCURLY cuerpo RCURLY
Rule 55    defineFunction -> FUNCTION ID LPAREN RPAREN LCURLY cuerpo RCURLY
Rule 56    arguments -> ID
Rule 57    arguments -> ID COMMA arguments
Rule 58    anonymousFunction -> FUNCTION LPAREN RPAREN LCURLY cuerpo RCURLY
Rule 59    anonymousFunction -> FUNCTION LPAREN arguments RPAREN LCURLY cuerpo RCURLY
Rule 60    arrowFunction -> FN LPAREN ID RPAREN FNARROW arrowBody SEMICOLON
Rule 61    arrowBody -> FN LPAREN ID RPAREN FNARROW arrowBody
Rule 62    arrowBody -> cuerpo
Rule 63    echo -> ECHO values SEMICOLON
Rule 64    print -> PRINT LPAREN values RPAREN SEMICOLON
Rule 65    print -> PRINT value SEMICOLON
Rule 66    values -> value
Rule 67    values -> values COMMA value
Rule 68    fgets -> ID EQUAL FGETS LPAREN STDIN RPAREN SEMICOLON
Rule 69    arithmeticExpression -> value
Rule 70    arithmeticExpression -> arithmeticExpression arithmeticOperator arithmeticExpression
Rule 71    arithmeticExpression -> LPAREN arithmeticExpression RPAREN
Rule 72    value -> ID
Rule 73    value -> INTEGER
Rule 74    value -> FLOAT
Rule 75    value -> STRING
Rule 76    value -> BOOL
Rule 77    value -> NULL
Rule 78    arithmeticOperator -> PLUS
Rule 79    arithmeticOperator -> MINUS
Rule 80    arithmeticOperator -> TIMES
Rule 81    arithmeticOperator -> DIVIDE
Rule 82    arithmeticOperator -> MOD
Rule 83    arithmeticOperator -> EXP
Rule 84    line -> variableAsignation SEMICOLON
Rule 85    variableAsignation -> ID EQUAL value
Rule 86    variableAsignation -> ID EQUAL arithmeticExpression
Rule 87    comparingSign -> IS_EQUAL
Rule 88    comparingSign -> IDENTICAL
Rule 89    comparingSign -> NOTEQUAL
Rule 90    comparingSign -> LESSTHAN
Rule 91    comparingSign -> GREATERTHAN
Rule 92    comparingSign -> LESSEQUALTHAN
Rule 93    comparingSign -> GREATEREQUALTHAN
Rule 94    comparingValue -> value comparingSign value
Rule 95    logicalCondition -> comparingValue
Rule 96    logicalCondition -> comparingValue conditionOperator comparingValue
Rule 97    logicalCondition -> LPAREN logicalCondition RPAREN
Rule 98    conditionOperator -> AND
Rule 99    conditionOperator -> OR
Rule 100   conditionOperator -> XOR

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 98
ARRAY                : 41 46
AS                   : 
BITAND               : 
BITNOT               : 
BITOR                : 
BOOL                 : 76
BREAK                : 26
CALLABLE             : 
CASE                 : 26
CATCH                : 
CLASS                : 
CLONE                : 
CLOSE_TAG            : 23
COLON                : 25 26
COMMA                : 45 57 67
CONCAT               : 
CONCATASSIGN         : 
CONST                : 
CONTINUE             : 32
DECLARE              : 
DECREMENT            : 
DEFAULT              : 25
DIE                  : 
DIVIDE               : 81
DIVIDEASSIGN         : 
DO                   : 
DOC_COMMENT          : 
DOUBLEQUOTE          : 
ECHO                 : 63
ELSE                 : 29
ELSEIF               : 
EMPTY                : 
ENDWHILE             : 
EQUAL                : 40 48 51 68 85 86
ERRORCONTROL         : 
EVAL                 : 
EXECUTION            : 
EXIT                 : 
EXP                  : 83
EXPASSIGN            : 
EXTENDS              : 
FGETS                : 68
FINAL                : 
FINALLY              : 
FLOAT                : 74
FN                   : 60 61
FNARROW              : 60 61
FOR                  : 34
FOREACH              : 
FUNCTION             : 54 55 58 59
GLOBAL               : 
GOTO                 : 
GREATEREQUALTHAN     : 93
GREATERTHAN          : 91
ID                   : 40 48 49 50 51 52 53 54 55 56 57 60 61 68 72 85 86
IDENTICAL            : 88
IF                   : 29 30
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INCREMENT            : 
INSTANCEOF           : 
INSTEADOF            : 
INTEGER              : 73
INTERFACE            : 
ISSET                : 
IS_EQUAL             : 87
LCURLY               : 24 29 30 34 54 55 58 59
LESSEQUALTHAN        : 92
LESSTHAN             : 90
LIST                 : 
LOGICALNOT           : 
LPAREN               : 24 29 30 34 49 52 54 55 58 59 60 61 64 68 71 97
LSQUARE              : 42 47
MATCH                : 
MINUS                : 79
MINUSASSIGN          : 
MOD                  : 82
MODASSIGN            : 
NAMESPACE            : 
NEW                  : 48 51
NOTEQUAL             : 89
NULL                 : 77
OBJOP                : 49 50 52 53
OPEN_TAG             : 22
OR                   : 99
PLUS                 : 78
PLUSASSIGN           : 
POP                  : 50 53
PRINT                : 64 65
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUSH                 : 49 52
QUEUE                : 51
QUOTE                : 
RCURLY               : 24 29 34 54 55 58 59
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 
RPAREN               : 24 29 30 34 41 46 49 52 54 55 58 59 60 61 64 68 71 97
RSQUARE              : 42 47
SEMICOLON            : 26 32 35 35 36 36 37 37 40 48 49 50 51 52 53 60 63 64 65 68 84
STACK                : 48
STATIC               : 
STDIN                : 68
STRING               : 75
SWITCH               : 24
THROW                : 
TIMES                : 80
TIMESASSIGN          : 
TRAIT                : 
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
WHILE                : 
XOR                  : 100
YIELD                : 
YIELD_FROM           : 
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

anonymousFunction    : 12
arguments            : 54 57 59
arithmeticExpression : 3 70 70 71 86
arithmeticOperator   : 70
arrayAsignation      : 7
arrayDeclaration     : 40
arrayValue           : 43 44 45
arraysValues         : 41 42 45
arrowBody            : 60 61
arrowFunction        : 13
comparingSign        : 94
comparingValue       : 37 95 96 96
conditionOperator    : 96
cuerpo               : 1 2 31 32 33 38 39 54 55 58 59 62
defineFunction       : 11
echo                 : 14
fgets                : 15
forStatement         : 5
forStatementBody     : 34 39
forStatementCondition : 34
ifStatementBody      : 29 29 30 33
if_elseStatement     : 4
line                 : 19
logicalCondition     : 21 29 30 97
print                : 20
programa             : 2 25 26 0
queueDeclaration     : 8
queueDequeue         : 10
queueEnqueue         : 9
stackDeclaration     : 16
stackPop             : 18
stackPush            : 17
switchCase           : 27 28
switchCases          : 24 28
switchDefault        : 24
switchStatement      : 6
value                : 24 26 49 52 65 66 67 69 85 94 94
values               : 46 47 63 64 67
variableAsignation   : 36 36 37 37 84

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cuerpo
    (2) programa -> . programa cuerpo
    (3) cuerpo -> . arithmeticExpression
    (4) cuerpo -> . if_elseStatement
    (5) cuerpo -> . forStatement
    (6) cuerpo -> . switchStatement
    (7) cuerpo -> . arrayAsignation
    (8) cuerpo -> . queueDeclaration
    (9) cuerpo -> . queueEnqueue
    (10) cuerpo -> . queueDequeue
    (11) cuerpo -> . defineFunction
    (12) cuerpo -> . anonymousFunction
    (13) cuerpo -> . arrowFunction
    (14) cuerpo -> . echo
    (15) cuerpo -> . fgets
    (16) cuerpo -> . stackDeclaration
    (17) cuerpo -> . stackPush
    (18) cuerpo -> . stackPop
    (19) cuerpo -> . line
    (20) cuerpo -> . print
    (21) cuerpo -> . logicalCondition
    (22) cuerpo -> . OPEN_TAG
    (23) cuerpo -> . CLOSE_TAG
    (69) arithmeticExpression -> . value
    (70) arithmeticExpression -> . arithmeticExpression arithmeticOperator arithmeticExpression
    (71) arithmeticExpression -> . LPAREN arithmeticExpression RPAREN
    (29) if_elseStatement -> . IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody RCURLY ELSE ifStatementBody
    (30) if_elseStatement -> . IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody
    (34) forStatement -> . FOR LPAREN forStatementCondition RPAREN LCURLY forStatementBody RCURLY
    (24) switchStatement -> . SWITCH LPAREN value RPAREN LCURLY switchCases switchDefault RCURLY
    (40) arrayAsignation -> . ID EQUAL arrayDeclaration SEMICOLON
    (51) queueDeclaration -> . ID EQUAL NEW QUEUE SEMICOLON
    (52) queueEnqueue -> . ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
    (53) queueDequeue -> . ID OBJOP POP SEMICOLON
    (54) defineFunction -> . FUNCTION ID LPAREN arguments RPAREN LCURLY cuerpo RCURLY
    (55) defineFunction -> . FUNCTION ID LPAREN RPAREN LCURLY cuerpo RCURLY
    (58) anonymousFunction -> . FUNCTION LPAREN RPAREN LCURLY cuerpo RCURLY
    (59) anonymousFunction -> . FUNCTION LPAREN arguments RPAREN LCURLY cuerpo RCURLY
    (60) arrowFunction -> . FN LPAREN ID RPAREN FNARROW arrowBody SEMICOLON
    (63) echo -> . ECHO values SEMICOLON
    (68) fgets -> . ID EQUAL FGETS LPAREN STDIN RPAREN SEMICOLON
    (48) stackDeclaration -> . ID EQUAL NEW STACK SEMICOLON
    (49) stackPush -> . ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
    (50) stackPop -> . ID OBJOP POP SEMICOLON
    (84) line -> . variableAsignation SEMICOLON
    (64) print -> . PRINT LPAREN values RPAREN SEMICOLON
    (65) print -> . PRINT value SEMICOLON
    (95) logicalCondition -> . comparingValue
    (96) logicalCondition -> . comparingValue conditionOperator comparingValue
    (97) logicalCondition -> . LPAREN logicalCondition RPAREN
    (72) value -> . ID
    (73) value -> . INTEGER
    (74) value -> . FLOAT
    (75) value -> . STRING
    (76) value -> . BOOL
    (77) value -> . NULL
    (85) variableAsignation -> . ID EQUAL value
    (86) variableAsignation -> . ID EQUAL arithmeticExpression
    (94) comparingValue -> . value comparingSign value

    OPEN_TAG        shift and go to state 22
    CLOSE_TAG       shift and go to state 23
    LPAREN          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    SWITCH          shift and go to state 28
    ID              shift and go to state 29
    FUNCTION        shift and go to state 30
    FN              shift and go to state 31
    ECHO            shift and go to state 32
    PRINT           shift and go to state 34
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    BOOL            shift and go to state 39
    NULL            shift and go to state 40

    programa                       shift and go to state 1
    cuerpo                         shift and go to state 2
    arithmeticExpression           shift and go to state 3
    if_elseStatement               shift and go to state 4
    forStatement                   shift and go to state 5
    switchStatement                shift and go to state 6
    arrayAsignation                shift and go to state 7
    queueDeclaration               shift and go to state 8
    queueEnqueue                   shift and go to state 9
    queueDequeue                   shift and go to state 10
    defineFunction                 shift and go to state 11
    anonymousFunction              shift and go to state 12
    arrowFunction                  shift and go to state 13
    echo                           shift and go to state 14
    fgets                          shift and go to state 15
    stackDeclaration               shift and go to state 16
    stackPush                      shift and go to state 17
    stackPop                       shift and go to state 18
    line                           shift and go to state 19
    print                          shift and go to state 20
    logicalCondition               shift and go to state 21
    value                          shift and go to state 24
    variableAsignation             shift and go to state 33
    comparingValue                 shift and go to state 35

state 1

    (0) S' -> programa .
    (2) programa -> programa . cuerpo
    (3) cuerpo -> . arithmeticExpression
    (4) cuerpo -> . if_elseStatement
    (5) cuerpo -> . forStatement
    (6) cuerpo -> . switchStatement
    (7) cuerpo -> . arrayAsignation
    (8) cuerpo -> . queueDeclaration
    (9) cuerpo -> . queueEnqueue
    (10) cuerpo -> . queueDequeue
    (11) cuerpo -> . defineFunction
    (12) cuerpo -> . anonymousFunction
    (13) cuerpo -> . arrowFunction
    (14) cuerpo -> . echo
    (15) cuerpo -> . fgets
    (16) cuerpo -> . stackDeclaration
    (17) cuerpo -> . stackPush
    (18) cuerpo -> . stackPop
    (19) cuerpo -> . line
    (20) cuerpo -> . print
    (21) cuerpo -> . logicalCondition
    (22) cuerpo -> . OPEN_TAG
    (23) cuerpo -> . CLOSE_TAG
    (69) arithmeticExpression -> . value
    (70) arithmeticExpression -> . arithmeticExpression arithmeticOperator arithmeticExpression
    (71) arithmeticExpression -> . LPAREN arithmeticExpression RPAREN
    (29) if_elseStatement -> . IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody RCURLY ELSE ifStatementBody
    (30) if_elseStatement -> . IF LPAREN logicalCondition RPAREN LCURLY ifStatementBody
    (34) forStatement -> . FOR LPAREN forStatementCondition RPAREN LCURLY forStatementBody RCURLY
    (24) switchStatement -> . SWITCH LPAREN value RPAREN LCURLY switchCases switchDefault RCURLY
    (40) arrayAsignation -> . ID EQUAL arrayDeclaration SEMICOLON
    (51) queueDeclaration -> . ID EQUAL NEW QUEUE SEMICOLON
    (52) queueEnqueue -> . ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
    (53) queueDequeue -> . ID OBJOP POP SEMICOLON
    (54) defineFunction -> . FUNCTION ID LPAREN arguments RPAREN LCURLY cuerpo RCURLY
    (55) defineFunction -> . FUNCTION ID LPAREN RPAREN LCURLY cuerpo RCURLY
    (58) anonymousFunction -> . FUNCTION LPAREN RPAREN LCURLY cuerpo RCURLY
    (59) anonymousFunction -> . FUNCTION LPAREN arguments RPAREN LCURLY cuerpo RCURLY
    (60) arrowFunction -> . FN LPAREN ID RPAREN FNARROW arrowBody SEMICOLON
    (63) echo -> . ECHO values SEMICOLON
    (68) fgets -> . ID EQUAL FGETS LPAREN STDIN RPAREN SEMICOLON
    (48) stackDeclaration -> . ID EQUAL NEW STACK SEMICOLON
    (49) stackPush -> . ID OBJOP PUSH LPAREN value RPAREN SEMICOLON
    (50) stackPop -> . ID OBJOP POP SEMICOLON
    (84) line -> . variableAsignation SEMICOLON
    (64) print -> . PRINT LPAREN values RPAREN SEMICOLON
    (65) print -> . PRINT value SEMICOLON
    (95) logicalCondition -> . comparingValue
    (96) logicalCondition -> . comparingValue conditionOperator comparingValue
    (97) logicalCondition -> . LPAREN logicalCondition RPAREN
    (72) value -> . ID
    (73) value -> . INTEGER
    (74) value -> . FLOAT
    (75) value -> . STRING
    (76) value -> . BOOL
    (77) value -> . NULL
    (85) variableAsignation -> . ID EQUAL value
    (86) variableAsignation -> . ID EQUAL arithmeticExpression
    (94) comparingValue -> . value comparingSign value

    OPEN_TAG        shift and go to state 22
    CLOSE_TAG       shift and go to state 23
    LPAREN          shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    SWITCH          shift and go to state 28
    ID              shift and go to state 29
    FUNCTION        shift and go to state 30
    FN              shift and go to state 31
    ECHO            shift and go to state 32
    PRINT           shift and go to state 34
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    BOOL            shift and go to state 39
    NULL            shift and go to state 40

    cuerpo                         shift and go to state 41
    arithmeticExpression           shift and go to state 3
    if_elseStatement               shift and go to state 4
    forStatement                   shift and go to state 5
    switchStatement                shift and go to state 6
    arrayAsignation                shift and go to state 7
    queueDeclaration               shift and go to state 8
    queueEnqueue                   shift and go to state 9
    queueDequeue                   shift and go to state 10
    defineFunction                 shift and go to state 11
    anonymousFunction              shift and go to state 12
    arrowFunction                  shift and go to state 13
    echo                           shift and go to state 14
    fgets                          shift and go to state 15
    stackDeclaration               shift and go to state 16
    stackPush                      shift and go to state 17
    stackPop                       shift and go to state 18
    line                           shift and go to state 19
    print                          shift and go to state 20
    logicalCondition               shift and go to state 21
    value                          shift and go to state 24
    variableAsignation             shift and go to state 33
    comparingValue                 shift and go to state 35

state 2

    (1) programa -> cuerpo .

    OPEN_TAG        reduce using rule 1 (programa -> cuerpo .)
    CLOSE_TAG       reduce using rule 1 (programa -> cuerpo .)
    LPAREN          reduce using rule 1 (programa -> cuerpo .)
    IF              reduce using rule 1 (programa -> cuerpo .)
    FOR             reduce using rule 1 (programa -> cuerpo .)
    SWITCH          reduce using rule 1 (programa -> cuerpo .)
    ID              reduce using rule 1 (programa -> cuerpo .)
    FUNCTION        reduce using rule 1 (programa -> cuerpo .)
    FN              reduce using rule 1 (programa -> cuerpo .)
    ECHO            reduce using rule 1 (programa -> cuerpo .)
    PRINT           reduce using rule 1 (programa -> cuerpo .)
    INTEGER         reduce using rule 1 (programa -> cuerpo .)
    FLOAT           reduce using rule 1 (programa -> cuerpo .)
    STRING          reduce using rule 1 (programa -> cuerpo .)
    BOOL            reduce using rule 1 (programa -> cuerpo .)
    NULL            reduce using rule 1 (programa -> cuerpo .)
    $end            reduce using rule 1 (programa -> cuerpo .)
    RCURLY          reduce using rule 1 (programa -> cuerpo .)
    BREAK           reduce using rule 1 (programa -> cuerpo .)


state 3

    (3) cuerpo -> arithmeticExpression .
    (70) arithmeticExpression -> arithmeticExpression . arithmeticOperator arithmeticExpression
    (78) arithmeticOperator -> . PLUS
    (79) arithmeticOperator -> . MINUS
    (80) arithmeticOperator -> . TIMES
    (81) arithmeticOperator -> . DIVIDE
    (82) arithmeticOperator -> . MOD
    (83) arithmeticOperator -> . EXP

    OPEN_TAG        reduce using rule 3 (cuerpo -> arithmeticExpression .)
    CLOSE_TAG       reduce using rule 3 (cuerpo -> arithmeticExpression .)
    LPAREN          reduce using rule 3 (cuerpo -> arithmeticExpression .)
    IF              reduce using rule 3 (cuerpo -> arithmeticExpression .)
    FOR             reduce using rule 3 (cuerpo -> arithmeticExpression .)
    SWITCH          reduce using rule 3 (cuerpo -> arithmeticExpression .)
    ID              reduce using rule 3 (cuerpo -> arithmeticExpression .)
    FUNCTION        reduce using rule 3 (cuerpo -> arithmeticExpression .)
    FN              reduce using rule 3 (cuerpo -> arithmeticExpression .)
    ECHO            reduce using rule 3 (cuerpo -> arithmeticExpression .)
    PRINT           reduce using rule 3 (cuerpo -> arithmeticExpression .)
    INTEGER         reduce using rule 3 (cuerpo -> arithmeticExpression .)
    FLOAT           reduce using rule 3 (cuerpo -> arithmeticExpression .)
    STRING          reduce using rule 3 (cuerpo -> arithmeticExpression .)
    BOOL            reduce using rule 3 (cuerpo -> arithmeticExpression .)
    NULL            reduce using rule 3 (cuerpo -> arithmeticExpression .)
    $end            reduce using rule 3 (cuerpo -> arithmeticExpression .)
    RCURLY          reduce using rule 3 (cuerpo -> arithmeticExpression .)
    CONTINUE        reduce using rule 3 (cuerpo -> arithmeticExpression .)
    SEMICOLON       reduce using rule 3 (cuerpo -> arithmeticExpression .)
    BREAK           reduce using rule 3 (cuerpo -> arithmeticExpression .)
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    MOD             shift and go to state 47
    EXP             shift and go to state 48

    arithmeticOperator             shift and go to state 42

state 4

    (4) cuerpo -> if_elseStatement .

    OPEN_TAG        reduce using rule 4 (cuerpo -> if_elseStatement .)
    CLOSE_TAG       reduce using rule 4 (cuerpo -> if_elseStatement .)
    LPAREN          reduce using rule 4 (cuerpo -> if_elseStatement .)
    IF              reduce using rule 4 (cuerpo -> if_elseStatement .)
    FOR             reduce using rule 4 (cuerpo -> if_elseStatement .)
    SWITCH          reduce using rule 4 (cuerpo -> if_elseStatement .)
    ID              reduce using rule 4 (cuerpo -> if_elseStatement .)
    FUNCTION        reduce using rule 4 (cuerpo -> if_elseStatement .)
    FN              reduce using rule 4 (cuerpo -> if_elseStatement .)
    ECHO            reduce using rule 4 (cuerpo -> if_elseStatement .)
    PRINT           reduce using rule 4 (cuerpo -> if_elseStatement .)
    INTEGER         reduce using rule 4 (cuerpo -> if_elseStatement .)
    FLOAT           reduce using rule 4 (cuerpo -> if_elseStatement .)
    STRING          reduce using rule 4 (cuerpo -> if_elseStatement .)
    BOOL            reduce using rule 4 (cuerpo -> if_elseStatement .)
    NULL            reduce using rule 4 (cuerpo -> if_elseStatement .)
    $end            reduce using rule 4 (cuerpo -> if_elseStatement .)
    RCURLY          reduce using rule 4 (cuerpo -> if_elseStatement .)
    CONTINUE        reduce using rule 4 (cuerpo -> if_elseStatement .)
    SEMICOLON       reduce using rule 4 (cuerpo -> if_elseStatement .)
    BREAK           reduce using rule 4 (cuerpo -> if_elseStatement .)


state 5

    (5) cuerpo -> forStatement .

    OPEN_TAG        reduce using rule 5 (cuerpo -> forStatement .)
    CLOSE_TAG       reduce using rule 5 (cuerpo -> forStatement .)
    LPAREN          reduce using rule 5 (cuerpo -> forStatement .)
    IF              reduce using rule 5 (cuerpo -> forStatement .)
    FOR             reduce using rule 5 (cuerpo -> forStatement .)
    SWITCH          reduce using rule 5 (cuerpo -> forStatement .)
    ID              reduce using rule 5 (cuerpo -> forStatement .)
    FUNCTION        reduce using rule 5 (cuerpo -> forStatement .)
    FN              reduce using rule 5 (cuerpo -> forStatement .)
    ECHO            reduce using rule 5 (cuerpo -> forStatement .)
    PRINT           reduce using rule 5 (cuerpo -> forStatement .)
    INTEGER         reduce using rule 5 (cuerpo -> forStatement .)
    FLOAT           reduce using rule 5 (cuerpo -> forStatement .)
    STRING          reduce using rule 5 (cuerpo -> forStatement .)
    BOOL            reduce using rule 5 (cuerpo -> forStatement .)
    NULL            reduce using rule 5 (cuerpo -> forStatement .)
    $end            reduce using rule 5 (cuerpo -> forStatement .)
    RCURLY          reduce using rule 5 (cuerpo -> forStatement .)
    CONTINUE        reduce using rule 5 (cuerpo -> forStatement .)
    SEMICOLON       reduce using rule 5 (cuerpo -> forStatement .)
    BREAK           reduce using rule 5 (cuerpo -> forStatement .)


state 6

    (6) cuerpo -> switchStatement .

    OPEN_TAG        reduce using rule 6 (cuerpo -> switchStatement .)
    CLOSE_TAG       reduce using rule 6 (cuerpo -> switchStatement .)
    LPAREN          reduce using rule 6 (cuerpo -> switchStatement .)
    IF              reduce using rule 6 (cuerpo -> switchStatement .)
    FOR             reduce using rule 6 (cuerpo -> switchStatement .)
    SWITCH          reduce using rule 6 (cuerpo -> switchStatement .)
    ID              reduce using rule 6 (cuerpo -> switchStatement .)
    FUNCTION        reduce using rule 6 (cuerpo -> switchStatement .)
    FN              reduce using rule 6 (cuerpo -> switchStatement .)
    ECHO            reduce using rule 6 (cuerpo -> switchStatement .)
    PRINT           reduce using rule 6 (cuerpo -> switchStatement .)
    INTEGER         reduce using rule 6 (cuerpo -> switchStatement .)
    FLOAT           reduce using rule 6 (cuerpo -> switchStatement .)
    STRING          reduce using rule 6 (cuerpo -> switchStatement .)
    BOOL            reduce using rule 6 (cuerpo -> switchStatement .)
    NULL            reduce using rule 6 (cuerpo -> switchStatement .)
    $end            reduce using rule 6 (cuerpo -> switchStatement .)
    RCURLY          reduce using rule 6 (cuerpo -> switchStatement .)
    CONTINUE        reduce using rule 6 (cuerpo -> switchStatement .)
    SEMICOLON       reduce using rule 6 (cuerpo -> switchStatement .)
    BREAK           reduce using rule 6 (cuerpo -> switchStatement .)


state 7

    (7) cuerpo -> arrayAsignation .

    OPEN_TAG        reduce using rule 7 (cuerpo -> arrayAsignation .)
    CLOSE_TAG       reduce using rule 7 (cuerpo -> arrayAsignation .)
    LPAREN          reduce using rule 7 (cuerpo -> arrayAsignation .)
    IF              reduce using rule 7 (cuerpo -> arrayAsignation .)
    FOR             reduce using rule 7 (cuerpo -> arrayAsignation .)
    SWITCH          reduce using rule 7 (cuerpo -> arrayAsignation .)
    ID              reduce using rule 7 (cuerpo -> arrayAsignation .)
    FUNCTION        reduce using rule 7 (cuerpo -> arrayAsignation .)
    FN              reduce using rule 7 (cuerpo -> arrayAsignation .)
    ECHO            reduce using rule 7 (cuerpo -> arrayAsignation .)
    PRINT           reduce using rule 7 (cuerpo -> arrayAsignation .)
    INTEGER         reduce using rule 7 (cuerpo -> arrayAsignation .)
    FLOAT           reduce using rule 7 (cuerpo -> arrayAsignation .)
    STRING          reduce using rule 7 (cuerpo -> arrayAsignation .)
    BOOL            reduce using rule 7 (cuerpo -> arrayAsignation .)
    NULL            reduce using rule 7 (cuerpo -> arrayAsignation .)
    $end            reduce using rule 7 (cuerpo -> arrayAsignation .)
    RCURLY          reduce using rule 7 (cuerpo -> arrayAsignation .)
    CONTINUE        reduce using rule 7 (cuerpo -> arrayAsignation .)
    SEMICOLON       reduce using rule 7 (cuerpo -> arrayAsignation .)
    BREAK           reduce using rule 7 (cuerpo -> arrayAsignation .)


state 8

    (8) cuerpo -> queueDeclaration .
